--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -1,2 +1,9 @@
 # Link the executable.
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_COMPILE_NAME} main.cxx)
+
+# Add the subdirectories.
+add_subdirectory(hosting)
+
+# Define the compilation flag indicating that the projet is being built for windows.
+set_target_properties(${PROJECT_COMPILE_NAME} PROPERTIES DEBUG_POSTFIX "d")
+target_compile_definitions(${PROJECT_COMPILE_NAME} PRIVATE "WINEXPORT_")
